--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <div id="results-carousel" class="carousel results-carousel align-items-center">
         <div class="item">
           <!-- Your image here -->
-          <img src="static/images/caption.png" alt="MY ALT TEXT"/>
+          <img src="static/images/caption_new.png" alt="MY ALT TEXT"/>
           <h2 class="subtitle has-text-centered">
             Monkey can accurately describe the details in the image.
           </h2>
