--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                   <div>QA</div>
               </li>
               <li>
-                  <img class="status3-pic" src="static/videos/caption.GIF">
+                  <img class="status3-pic" src="static/videos/caption.gif">
                   <div>caption</div>
               </li>
               <li>
